syntax = "proto3";
package proto;

option go_package = "github.com/ferza17/ecommerce-microservices-v2/user-service/model/pb";
import "userMessage.proto";

service UserService {
  rpc FindUserById(FindUserByIdRequest) returns (User);
  rpc FindUserByEmailAndPassword(FindUserByEmailAndPasswordRequest) returns (User);
  rpc UserLoginByEmailAndPassword(UserLoginByEmailAndPasswordRequest) returns (UserLoginByEmailAndPasswordResponse);
  rpc UserLogoutByToken(UserLogoutByTokenRequest) returns (UserLogoutByTokenResponse);
  rpc FindUserByToken(FindUserByTokenRequest) returns (User);
}